; ModuleID = '/home/carl/AnghaBench/mpv/osdep/extr_terminal-win.c_input_thread_fn.c'
source_filename = "/home/carl/AnghaBench/mpv/osdep/extr_terminal-win.c_input_thread_fn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"terminal\00", align 1
@death = common dso_local global i8* null, align 8
@FALSE = common dso_local global i32 0, align 4
@INFINITE = common dso_local global i32 0, align 4
@WAIT_OBJECT_0 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @input_thread_fn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @input_thread_fn(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca [2 x i8*], align 16
  %5 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %6 = call i32 @mpthread_set_name(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %7 = load i8*, i8** %2, align 8
  store i8* %7, i8** %3, align 8
  %8 = getelementptr inbounds [2 x i8*], [2 x i8*]* %4, i64 0, i64 0
  %9 = load i8*, i8** %3, align 8
  store i8* %9, i8** %8, align 8
  %10 = getelementptr inbounds i8*, i8** %8, i64 1
  %11 = load i8*, i8** @death, align 8
  store i8* %11, i8** %10, align 8
  br label %12

12:                                               ; preds = %1, %21
  %13 = getelementptr inbounds [2 x i8*], [2 x i8*]* %4, i64 0, i64 0
  %14 = load i32, i32* @FALSE, align 4
  %15 = load i32, i32* @INFINITE, align 4
  %16 = call i64 @WaitForMultipleObjects(i32 2, i8** %13, i32 %14, i32 %15)
  store i64 %16, i64* %5, align 8
  %17 = load i64, i64* %5, align 8
  %18 = load i64, i64* @WAIT_OBJECT_0, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %12
  br label %24

21:                                               ; preds = %12
  %22 = load i8*, i8** %3, align 8
  %23 = call i32 @read_input(i8* %22)
  br label %12

24:                                               ; preds = %20
  ret i8* null
}

declare dso_local i32 @mpthread_set_name(i8*) #1

declare dso_local i64 @WaitForMultipleObjects(i32, i8**, i32, i32) #1

declare dso_local i32 @read_input(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
